# cmip_basins

./: .gitignore  .pylintrc  .stickler.yml  .travis.yml  README.md  basins.py  meta.yaml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  publish-to-conda.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
ci/: environment-py38.yml
cmip_basins/: __init__.py  basins.py  cmip6.py  gfdl.py
cmip_basins/tests/: test_basins.py
conda/: meta.yaml
examples/: basins_1x1deg.py  example_OM4.bash  example_OM4p125.py
