[options]
packages = cmip_basins
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    regionmask
    setuptools >= 41.2  # For pkg_resources
    xarray
    xesmf
setup_requires =
    setuptools >= 41.2
