[options]
packages = cmip_basins
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
    regionmask
    matplotlib
    setuptools >= 41.2  # For pkg_resources
    xarray
setup_requires =
    setuptools >= 41.2
