[metadata]
name = cmip_basins
version = 1.0.2b
description = Generate CMIP-style ocean basin masks
url = https://github.com/jkrasting/cmip_basins
author = John Krasting
author_email = john.krasting@noaa.gov
keywords = cmip cmip6 omip oceanography
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: Public Domain
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type=text/x-rst
long_description =
    **cmip_basins** is a Python package in the public domain
    that generates 2-dimensional basin masks for arbitraty 
    ocean model grids. The tool supports both standard (i.e. "lat-lon") 
    and non-standard (e.g. "tripolar) ocean model grids.

    The package provides two types of basin codes:

    1. Classic 10-code CMIP specifications
    2. More detailed sub-regions developed at GFDL

    More Information
    ----------------
    - Source code: `<http://github.com/jkrasting/cmip_basins>`_

[options]
packages = cmip_basins
zip_safe = False
include_package_data = False
python_requires = >=3.6
scripts = 
    cmip_basins/basins.py
install_requires =
    numpy>=1.17
    xarray>=0.16.0

